# mpmc-std

./: BENCHMARK_RESULTS.md  CLAUDE.md  Cargo.toml  README.md  copy_benchmarks.sh  package.json  preview_docs.sh
benches/: mpmc_bench.rs  simd_bench.rs
docs/: ALGORITHM_DIAGRAMS.html  ALGORITHM_DIAGRAMS.md  COMPARATIVE_ANALYSIS.html  COMPARATIVE_ANALYSIS.md  IMPLEMENTATION_NOTES.html  IMPLEMENTATION_NOTES.md  README.html  SIMD_OPTIMIZATION_GUIDE.html  SIMD_OPTIMIZATION_GUIDE.md  index.html  shared-styles.css
docs/benchmarks/contention/high_contention/report/: index.html
docs/benchmarks/contention/report/: index.html
docs/benchmarks/latency/recv_latency/base/: benchmark.json  tukey.json
docs/benchmarks/latency/recv_latency/new/: estimates.json  sample.json
docs/benchmarks/latency/recv_latency/report/: index.html
docs/benchmarks/latency/report/: index.html
docs/benchmarks/latency/send_latency/base/: estimates.json  sample.json  tukey.json
docs/benchmarks/latency/send_latency/new/: benchmark.json  estimates.json  sample.json  tukey.json
docs/benchmarks/multi_producer_multi_consumer/report/: index.html
docs/benchmarks/multi_producer_single_consumer/report/: index.html
docs/benchmarks/report/: index.html
docs/benchmarks/single_producer_multi_consumer/report/: index.html
docs/benchmarks/single_threaded_throughput/report/: index.html
examples/: adaptive_simd.rs  simd_benchmark.rs  simd_vs_regular_benchmark.rs  simple_benchmark.rs
scripts/: README.md  markdown-converter.js
src/: lib.rs  main.rs  simd_queue.rs
(+134 files in other folders)
