[package]
name = "mpmc-std"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

[features]
simd = []
default = ["simd"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mpmc_bench"
harness = false

[[bench]]
name = "simd_bench"
harness = false
required-features = ["simd"]
